fix: checked options text not visible in forms

--- a/public/styles/partials/form.css
+++ b/public/styles/partials/form.css
@@ -35,9 +35,13 @@
   transition: padding 100ms ease-in;
 }
 
+.form option:hover {
+  cursor: pointer;
+}
+
 .form option:checked {
   background-color: var(--clr-neutral-600);
-  border-color: var(--clr-neutral-700);
+  color: var(--clr-neutral-200);
   padding-left: 1.5em;
 }
 
